--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
                                 <img src="../static/images/{{ electronics[5] }}" alt="{{ electronics[1] }}" width="50" height="50">
                                 <!-- put an overlay button -->
                                 <div class="overlay">
-                                    <a href="/single" class="buy-btn">Buy now</a>
+                                    <a href="/single/{{ electronics[0] }}" class="buy-btn">Buy now</a>
                                 </div>
                             </div>
 
@@ -90,19 +90,19 @@
         <section class="slider p-4">
             <ul class="cs-hidden autoWidth">
                 
-                {%  for beauty in beauty  %}
+                {%  for singlebeauty in beauty  %}
                     <li>
                         <div class="box">
                             <div class="slide-img">
-                                <img src="../static/images/{{ beauty[5] }}" alt="{{ beauty[1] }}" width="50" height="50">
+                                <img src="../static/images/{{ singlebeauty[5] }}" alt="{{ beauty[1] }}" width="50" height="50">
                                 <!-- put an overlay button -->
                                 <div class="overlay">
-                                    <a href="" class="buy-btn">Buy now</a>
+                                    <a href="/single/{{ singlebeauty[0] }}" class="buy-btn">Buy now</a>
                                 </div>
                             </div>
 
                             <div class="detail-box">
-                                {{ beauty[1] }} <br> <b class="text-warning"> KES {{ beauty[3] }}</b>
+                                {{ singlebeauty[1] }} <br> <b class="text-warning"> KES {{ singlebeauty[3] }}</b>
                             </div>
                         </div>
                     </li>
@@ -120,19 +120,19 @@
             <section class="slider p-4">
                 <ul class="cs-hidden autoWidth">
                     
-                    {%  for beauty in beauty  %}
+                    {%  for singlebeauty in beauty  %}
                         <li>
                             <div class="box">
                                 <div class="slide-img">
-                                    <img src="../static/images/{{ beauty[5] }}" alt="{{ beauty[1] }}" width="50" height="50">
+                                    <img src="../static/images/{{ singlebeauty[5] }}" alt="{{ beauty[1] }}" width="50" height="50">
                                     <!-- put an overlay button -->
                                     <div class="overlay">
-                                        <a href="" class="buy-btn">Buy now</a>
+                                        <a href="/single/{{ singlebeauty[0] }}" class="buy-btn">Buy now</a>
                                     </div>
                                 </div>
     
                                 <div class="detail-box">
-                                    {{ beauty[1] }} <br> <b class="text-warning"> KES {{ beauty[3] }}</b>
+                                    {{ singlebeauty[1] }} <br> <b class="text-warning"> KES {{ singlebeauty[3] }}</b>
                                 </div>
                             </div>
                         </li>
